feat: Implement environmental impact factors and enhance sustainability calculations; add dynamic options for material types and improve user input handling in templates.